--- a/app/src/main/res/values-ar-rSA/strings.xml
+++ b/app/src/main/res/values-ar-rSA/strings.xml
@@ -277,4 +277,32 @@
     <string name="pref_locale_custom_title">"لغة مخصصة"</string>
     <string name="pref_locale_custom_summary">"اجبار اختيار لغة مخصصة للتطبيق"</string>
     <string name="pref_locale_list_title">"تحديد اللغة"</string>
+    <string name="action_grant">"سماح"</string>
+    <string name="action_syncing">"مزامنة"</string>
+    <string name="cancel_button_label">"الغاء"</string>
+    <string name="choose_button_label">"اختيار"</string>
+    <string name="details_anti_features">"مميزات مضادة"</string>
+    <string name="details_no_anti_features">"لاتوجد مميزات مضادة"</string>
+    <string name="details_no_changes">"لم يتم توفير سجل التغييرات من المطور"</string>
+    <string name="details_no_handler">"ليس لديك أي تطبيق متاح يمكنه التعامل مع%s."</string>
+    <string name="error_dir_access">"لايمكن الوصول الى المسار"</string>
+    <string name="label_parent_directory">"المسار الرئيسي"</string>
+    <string name="last_edit">"اخر تعديل: "</string>
+    <string name="pref_install_profile_summary">"حدد ملف التعريف الهدف لتثبيت التطبيقات عليه. يعمل فقط مع طريقة التثبيت بالروت"</string>
+    <string name="pref_install_profile_title">"ملفات تعريف التثبيت"</string>
+    <string name="pref_updates_app_suggested">"فقط التحديثات المقترحة"</string>
+    <string name="pref_updates_app_suggested_desc">"في حالة التمكين ، ستتوفر التحديثات المقترحة فقط"</string>
+    <string name="repo_unable_to_reach">"لايمكن الوصول اليه"</string>
+    <string name="string_install_failed">"فشل في التثبيت"</string>
+    <string name="string_install_success">"تم تثبيته بنجاح"</string>
+    <string name="string_no_root">"صلاحية الروت غير متاحة"</string>
+    <string name="string_uninstall_failed">"فشل في الغاء التثبيت"</string>
+    <string name="string_uninstall_success">"تم التثبيت بنجاح"</string>
+    <string name="action_remove_all">"ازالة الكل"</string>
+    <string name="action_save_return">"حفظ و رجوع"</string>
+    <string name="pref_install_mode_session">"الجلسة"</string>
+    <string name="pref_install_mode_miui">"يبدو أنك تستخدم MIUI ، ولا يعمل مثبت الجلسة على الأجهزة التي تعمل بنظام MIUI. يرجى تعطيل تحسينات MIUI أو استخدام طرق التثبيت الأخرى."</string>
+    <string name="string_export_failed">"فشل في تصدير القائمة"</string>
+    <string name="string_export_to">"تم تصدير القائمة"</string>
+    <string name="string_import_failed">"فشل في استيراد القائمة"</string>
 </resources>
