--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -2,10 +2,12 @@
 <resources>
     <string name="action_add">"Tambahkan"</string>
     <string name="action_ask">"Tanyakan"</string>
-    <string name="action_blacklist">"Daftar hitam"</string>
+
+    <!-- Fuzzy -->
+    <string name="action_blacklist">"Daftar Hitam"</string>
     <string name="action_cancel">"Batal"</string>
-    <string name="action_clear">"Hapus"</string>
-    <string name="action_clear_all">"Bersihkan semua"</string>
+    <string name="action_clear">"Bersihkan"</string>
+    <string name="action_clear_all">"Bersihkan Semua"</string>
     <string name="action_close">"Tutup"</string>
     <string name="action_copy">"Salin tautan"</string>
     <string name="action_copied">"Tautan disalin ke papan klip"</string>
@@ -13,72 +15,72 @@
     <string name="action_downloads">"Unduhan"</string>
     <string name="action_export">"Ekspor"</string>
     <string name="action_finish">"Selesai"</string>
-    <string name="action_favourites">"Aplikasi favorit"</string>
-    <string name="action_favourite_add">"Tambahkan ke favorit"</string>
-    <string name="action_favourite_remove">"Hapus dari favorit"</string>
-    <string name="action_get_local_apk">"Dapatkan APK Dari Ponsel"</string>
+    <string name="action_favourites">"Aplikasi Favorit"</string>
+    <string name="action_favourite_add">"Tambah Ke Daftar Favorit"</string>
+    <string name="action_favourite_remove">"Hapus Dari Daftar Favorit"</string>
+    <string name="action_get_local_apk">"Cari APK Dari Memori Ponsel"</string>
     <string name="action_home">"Beranda"</string>
     <string name="action_import">"Impor"</string>
-    <string name="action_info">"Tentang Aplikasi"</string>
+    <string name="action_info">"Info Aplikasi"</string>
     <string name="action_install">"Pasang"</string>
     <string name="action_installing">"Memasang"</string>
     <string name="action_installed">"Terpasang"</string>
-    <string name="action_installations">"Instalasi"</string>
+    <string name="action_installations">"Pemasangan"</string>
     <string name="action_later">"Nanti"</string>
     <string name="action_more">"Lainnya"</string>
     <string name="action_next">"Selanjutnya"</string>
     <string name="action_open">"Buka"</string>
     <string name="action_pause">"Jeda"</string>
-    <string name="action_recheck">"Periksa kembali"</string>
-    <string name="action_remove">"Hapus"</string>
-    <string name="action_restart">"Muat ulang"</string>
+    <string name="action_recheck">"Periksa Kembali"</string>
+    <string name="action_remove">"Buang"</string>
+    <string name="action_restart">"Hidupkan Ulang"</string>
     <string name="action_resume">"Lanjutkan"</string>
     <string name="action_retry">"Ulangi"</string>
     <string name="action_settings">"Setelan"</string>
     <string name="action_share">"Bagikan"</string>
-    <string name="action_sync">"Sinkronkan"</string>
-    <string name="action_uninstall">"Copot pemasangan"</string>
+    <string name="action_sync">"Sinkronisasi"</string>
+    <string name="action_uninstall">"Lepas Pemasangan"</string>
     <string name="action_update">"Perbarui"</string>
     <string name="action_updates">"Pembaruan"</string>
-    <string name="action_use_mirror">"Gunakan URL mirror"</string>
+    <string name="action_use_mirror">"Pakai URL Cadangan"</string>
     <string name="action_unsupported">"Aplikasi Tidak Kompatibel"</string>
-    <string name="action_whitelist">"Daftar Favorit"</string>
-    <string name="details_more">"Baca lebih lanjut"</string>
-    <string name="details_more_apps_dev">"Aplikasi lainnya dari pengembang"</string>
-    <string name="details_more_apps_similar">"Aplikasi terkait kategori serupa"</string>
-    <string name="details_other">"Versi lainnya"</string>
-    <string name="details_no_description">"Tidak ada deskripsi yang diberikan oleh pengembang"</string>
-    <string name="details_no_permissions">"Tidak ada izin yang digunakan."</string>
-    <string name="details_permissions">"Perizinan aplikasi"</string>
-    <string name="details_permissions_desc">"Aurora Droid menggunakan izin berikut"</string>
-    <string name="details_repo_desc">"Pilih repositori untuk disinkronkan"</string>
+    <string name="action_whitelist">"Daftar Putih"</string>
+    <string name="details_more">"Baca Lebih Lanjut"</string>
+    <string name="details_more_apps_dev">"Aplikasi Lain Dari Pengembang"</string>
+    <string name="details_more_apps_similar">"Aplikasi Kategori Serupa"</string>
+    <string name="details_other">"Versi Lainnya"</string>
+    <string name="details_no_description">"Tak ada deskripsi yang diberikan oleh pengembang"</string>
+    <string name="details_no_permissions">"Tak ada izin yang di minta"</string>
+    <string name="details_permissions">"Perizinan Aplikasi"</string>
+    <string name="details_permissions_desc">"Aurora Droid meminta izin berikut"</string>
+    <string name="details_repo_desc">"Pilih Repositori Untuk Disinkronkan"</string>
     <string name="dialog_sync_title">"Pembaruan Repo"</string>
-    <string name="dialog_sync_desc">"Apakah Anda ingin memperbarui aplikasi dari repositori?"</string>
-    <string name="dialog_sync_desc_alt">"Sinkronisasi Data lama terdeteksi, mungkin ada pembaruan baru, apakah Anda ingin menyinkronkan semua repositori?"</string>
-    <string name="dialog_sync_completed_desc">"Semua repositori diperbarui, disarankan untuk me-restart aplikasi setelah pembaruan"</string>
+    <string name="dialog_sync_desc">"Apa kamu ingin memperbarui aplikasi dari repositori?"</string>
+    <string name="dialog_sync_desc_alt">"Sinkronisasi data lama terdeteksi, mungkin ada pembaruan, kamu ingin menyinkronkan semua repositori?"</string>
+    <string name="dialog_sync_completed_desc">"Semua repositori diperbarui, disarankan untuk menghidupkan ulang aplikasi setelah pembaruan repositori."</string>
     <string name="dialog_sync_positive">"Ya"</string>
     <string name="dialog_sync_negative">"Tidak"</string>
-    <string name="dialog_sync_complete_positive">"Mulai Ulang sekarang"</string>
+    <string name="dialog_sync_complete_positive">"Hidupkan Ulang Sekarang"</string>
     <string name="dialog_repo_title">"Tambahkan Repositori"</string>
-    <string name="dialog_repo_desc">"Apakah Anda benar-benar ingin menambahkan"</string>
+    <string name="dialog_repo_desc">"Apa kamu yakin ingin menambahkan?"</string>
     <string name="menu_downloads">"Unduhan"</string>
-    <string name="download_cancel_all">"Batalkan semua"</string>
+    <string name="download_cancel_all">"Batalkan Semua"</string>
     <string name="download_canceled">"Dibatalkan"</string>
-    <string name="download_clear_completed">"Penghapusan Selesai"</string>
+    <string name="download_clear_completed">"Pembersihan Selesai"</string>
     <string name="download_completed">"Terunduh"</string>
-    <string name="download_failed">"Unduhan Gagal"</string>
-    <string name="download_force_clear_all">"Paksa hapus semua"</string>
-    <string name="download_none">"Tidak ada unduhan"</string>
-    <string name="download_pause_all">"Jeda semua"</string>
+    <string name="download_failed">"Gagal Mengunduh"</string>
+    <string name="download_force_clear_all">"Paksa Bersihkan Semuanya"</string>
+    <string name="download_none">"Unduhan Kosong"</string>
+    <string name="download_pause_all">"Jeda Semua"</string>
     <string name="download_paused">"Dijeda"</string>
     <string name="download_progress">"Mengunduh"</string>
     <string name="download_queued">"Antrian"</string>
     <string name="download_resume">"Lanjutkan"</string>
-    <string name="download_resume_all">"Lanjutkan semua"</string>
+    <string name="download_resume_all">"Lanjutkan Semua"</string>
     <string name="filter_name_az">"Nama A-Z"</string>
     <string name="filter_name_za">"Nama Z-A"</string>
-    <string name="filter_size_min">"Ukuran Min"</string>
-    <string name="filter_size_max">"Ukuran maks"</string>
+    <string name="filter_size_min">"Ukuran Minimal"</string>
+    <string name="filter_size_max">"Ukuran Maksimal"</string>
     <string name="filter_date_updated">"Tanggal Diperbarui"</string>
     <string name="filter_date_added">"Tanggal ditambahkan"</string>
     <string name="installer_status_failure">"Pemasangan gagal"</string>
@@ -249,4 +251,32 @@
     <string name="pref_locale_custom_title">"Bahasa kostum"</string>
     <string name="pref_locale_custom_summary">"Terapkan bahasa yang dipilih aplikasi"</string>
     <string name="pref_locale_list_title">"Pilih bahasa"</string>
+    <string name="action_grant">"Akses"</string>
+    <string name="action_syncing">"Menyinkronkan"</string>
+    <string name="cancel_button_label">"Batal"</string>
+    <string name="choose_button_label">"Pilih"</string>
+    <string name="details_anti_features">"Anti Fitur"</string>
+    <string name="details_no_anti_features">"Tanpa Anti Fitur"</string>
+    <string name="details_no_changes">"Tidak ada log perubahan yang disediakan oleh pengembang"</string>
+    <string name="details_no_handler">"Kamu tidak punya aplikasi yang bisa menangani %s"</string>
+    <string name="error_dir_access">"Direktori tidak bisa diakses"</string>
+    <string name="label_parent_directory">"Direktori Induk"</string>
+    <string name="last_edit">"Terakhir di ubah:"</string>
+    <string name="pref_install_profile_summary">"Pilih profil target untuk memasang aplikasi. Hanya bekerja dengan metode instalasi root."</string>
+    <string name="pref_install_profile_title">"Profil Pemasangan"</string>
+    <string name="pref_updates_app_suggested">"Hanya pembaruan yang disarankan"</string>
+    <string name="pref_updates_app_suggested_desc">"Jika diaktifkan, hanya pembaruan yang disarankan yang akan tersedia"</string>
+    <string name="repo_unable_to_reach">"Tak bisa menjangkau"</string>
+    <string name="string_install_failed">"Gagal Memasang"</string>
+    <string name="string_install_success">"Berhasil Dipasang"</string>
+    <string name="string_no_root">"Akses ROOT tidak ada"</string>
+    <string name="string_uninstall_failed">"Gagal Melepas Pemasangan"</string>
+    <string name="string_uninstall_success">"Berhasil Melepas Pemasangan"</string>
+    <string name="action_remove_all">"Buang Semua"</string>
+    <string name="action_save_return">"Simpan &amp; Kembali"</string>
+    <string name="pref_install_mode_session">"Sesi"</string>
+    <string name="pref_install_mode_miui">"Sepertinya kamu memakai MIUI (Xiaomi), sesi pemasangan tidak bekerja pada perangkat yang memakai MIUI. Harap nonaktifkan Pengoptimalan MIUI atau gunakan metode instalasi lainnya."</string>
+    <string name="string_export_failed">"Gagal Mengekspor Daftar"</string>
+    <string name="string_export_to">"Daftar Berhasil Diekspor"</string>
+    <string name="string_import_failed">"Gagal Mengimpor Daftar"</string>
 </resources>
