Update strings.xml (POEditor.com)

--- a/app/src/main/res/values-ro-rRO/strings.xml
+++ b/app/src/main/res/values-ro-rRO/strings.xml
@@ -228,4 +228,45 @@
     <string name="toast_apk_whitelisted">"Adăugat la lista albă"</string>
     <string name="toast_apk_copy_success">"Copiere APK reușită"</string>
     <string name="toast_apk_copy_failure">"Copiere APK eșuată"</string>
+    <string name="action_ignore">"Ignoră această versiune"</string>
+    <string name="action_save">"Salvează"</string>
+    <string name="action_show_user_only">"Afișați numai aplicațiile utilizatorului"</string>
+    <string name="action_sortBy">"Sortare după"</string>
+    <string name="details_apk_suggested">"Sugerat"</string>
+    <string name="dialog_sync_completed_desc_alt">"Nu sunt disponibile actualizări noi"</string>
+    <string name="dialog_repo_list">"Lista de depozite"</string>
+    <string name="menu_repository">"Depozite"</string>
+    <string name="menu_setting">"Setări"</string>
+    <string name="menu_about">"Despre"</string>
+    <string name="download_metadata">"Obținerea metadatelor"</string>
+    <string name="list_update_all_txt_one">"actualizare disponibilă"</string>
+    <string name="list_update_selected">"Actualizare selectată"</string>
+    <string name="notification_channel_alert">"Notificare rapidă"</string>
+    <string name="notification_channel_general">"Notificare generală"</string>
+    <string name="sync_service">"Serviciul de sincronizare a depozitului rulează"</string>
+    <string name="sync_init">"Se caută actualizări"</string>
+    <string name="sync_downloading">"Descărcarea depozitelor"</string>
+    <string name="title_installed">"Aplicațiile și jocurile mele"</string>
+    <string name="pref_updates_app_experimental">"Permiteți actualizări experimentale"</string>
+    <string name="pref_updates_app_experimental_desc">"Dacă este activat, versiunile beta/alfa vor suprascrie versiunile stabile"</string>
+    <string name="details_new_changes">"Ce este nou"</string>
+    <string name="pref_downloader_internal">"Descărcare aplicații în spațiul de stocare intern"</string>
+    <string name="pref_downloader_internal_desc">"Dacă este activat, nu veți putea instala aplicații prin intermediul serviciilor Aurora"</string>
+    <string name="action_reset">"Resetare"</string>
+    <string name="action_select_all">"Selectați tot"</string>
+    <string name="list_not_installed">"Nu este instalat"</string>
+    <string name="list_repo_availability">"Se verifică disponibilitatea"</string>
+    <string name="list_repo_available">"Disponibil"</string>
+    <string name="list_repo_unavailable">"Indisponibil"</string>
+    <string name="title_repo_add_desc">"Adăugați un depozit personalizat pentru sincronizare"</string>
+    <string name="toast_repo_sync_empty">"Selectați cel puțin un staticRepo pentru sincronizare"</string>
+    <string name="toast_repo_sync_completed">"Toate depozitele au fost actualizate"</string>
+    <string name="toast_repo_sync_no_updates">"Nu există actualizări disponibile"</string>
+    <string name="action_about">"Despre"</string>
+    <string name="action_loading">"Se încarcă"</string>
+    <string name="pref_default">"Implicit"</string>
+    <string name="pref_locale_title">"Limba"</string>
+    <string name="action_grant">"Permiteți"</string>
+    <string name="pref_updates_app_suggested">"Doar actualizări sugerate"</string>
+    <string name="pref_updates_app_suggested_desc">"Dacă este activat, vor fi disponibile doar actualizările sugerate"</string>
 </resources>
