--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_blacklist">"Чёрный список"</string>
     <string name="action_cancel">"Отмена"</string>
     <string name="action_clear">"Очистить"</string>
-    <string name="action_clear_all">"Очистить всё"</string>
+    <string name="action_clear_all">"Очистить все"</string>
     <string name="action_close">"Закрыть"</string>
     <string name="action_copy">"Скопировать ссылку"</string>
     <string name="action_copied">"Ссылка скопирована в буфер обмена"</string>
@@ -17,16 +17,16 @@
     <string name="action_favourite_add">"Добавить в избранное"</string>
     <string name="action_favourite_remove">"Удалить из избранного"</string>
     <string name="action_get_local_apk">"Получить локальный APK"</string>
-    <string name="action_home">"Домой"</string>
+    <string name="action_home">"Главная"</string>
     <string name="action_import">"Импорт"</string>
-    <string name="action_info">"Информация"</string>
+    <string name="action_info">"Информация о приложении"</string>
     <string name="action_install">"Установить"</string>
     <string name="action_installing">"Установка"</string>
     <string name="action_installed">"Установлено"</string>
-    <string name="action_installations">"Сборка"</string>
+    <string name="action_installations">"Установки"</string>
     <string name="action_later">"Позже"</string>
     <string name="action_more">"Больше"</string>
-    <string name="action_next">"Следующий"</string>
+    <string name="action_next">"Далее"</string>
     <string name="action_open">"Открыть"</string>
     <string name="action_pause">"Пауза"</string>
     <string name="action_recheck">"Перепроверить"</string>
@@ -50,18 +50,13 @@
     <string name="details_no_description">"Описание не предоставлено разработчиком"</string>
     <string name="details_no_permissions">"Разрешения не используются"</string>
     <string name="details_permissions">"Разрешения приложения"</string>
-
-    <!-- Fuzzy -->
-    <string name="details_permissions_desc">"Магазин Аврора использует следующие разрешения"</string>
-
-    <!-- Fuzzy -->
-    <string name="details_repo_desc">"Выберите репозитории F-Droid для синхронизации"</string>
+    <string name="details_permissions_desc">"Aurora Droid использует следующие разрешения"</string>
+    <string name="details_repo_desc">"Выберите репозитории для синхронизации"</string>
     <string name="dialog_sync_title">"Обновление репозиториев"</string>
 
     <!-- Вы хотите обновить приложение из репозитория -->
-    <!-- Fuzzy -->
     <string name="dialog_sync_desc">"Вы хотите обновить приложения из репозиториев?"</string>
-    <string name="dialog_sync_desc_alt">"Обнаружены старые данные, могут быть новые обновления, вы хотите синхронизировать все репозитории"</string>
+    <string name="dialog_sync_desc_alt">"Обнаружены старые данные, могут быть новые обновления, вы хотите синхронизировать все репозитории?"</string>
     <string name="dialog_sync_completed_desc">"Все репозитории обновлены, рекомендуется перезапустить приложение после обновлений"</string>
     <string name="dialog_sync_positive">"Да"</string>
     <string name="dialog_sync_negative">"Нет"</string>
@@ -71,12 +66,10 @@
     <string name="menu_downloads">"Загрузки"</string>
     <string name="download_cancel_all">"Отменить все"</string>
     <string name="download_canceled">"Отменено"</string>
-    <string name="download_clear_completed">"Успешно очищено"</string>
+    <string name="download_clear_completed">"Очистить завершённые"</string>
     <string name="download_completed">"Загружено"</string>
-
-    <!-- Fuzzy -->
-    <string name="download_failed">"Ошибка скачивания"</string>
-    <string name="download_force_clear_all">"Очистить все"</string>
+    <string name="download_failed">"Не удалось скачать"</string>
+    <string name="download_force_clear_all">"Принудительно очистить все"</string>
     <string name="download_none">"Нет загрузок"</string>
     <string name="download_pause_all">"Приостановить все"</string>
     <string name="download_paused">"Приостановлено"</string>
@@ -84,23 +77,19 @@
     <string name="download_queued">"В очереди"</string>
     <string name="download_resume">"Продолжить"</string>
     <string name="download_resume_all">"Продолжить все"</string>
-    <string name="filter_name_az">"Имени A-Z"</string>
-    <string name="filter_name_za">"Имени Z-A"</string>
-    <string name="filter_size_min">"Размеру от минимального"</string>
-    <string name="filter_size_max">"Размеру от максимального"</string>
+    <string name="filter_name_az">"Имя A-Z"</string>
+    <string name="filter_name_za">"Имя Z-A"</string>
+    <string name="filter_size_min">"Минимальный размер"</string>
+    <string name="filter_size_max">"Максимальный размер"</string>
     <string name="filter_date_updated">"Дата обновления"</string>
     <string name="filter_date_added">"Дата добавления"</string>
     <string name="installer_status_failure">"Ошибка установки"</string>
     <string name="installer_status_failure_aborted">"Установка отменена"</string>
     <string name="installer_status_failure_blocked">"Установка была заблокирована"</string>
-
-    <!-- Fuzzy -->
     <string name="installer_status_failure_conflict">"Существует конфликтующий пакет"</string>
     <string name="installer_status_failure_incompatible">"Несовместимое приложение"</string>
     <string name="installer_status_failure_invalid">"Неверный или повреждённый APK"</string>
-
-    <!-- Fuzzy -->
-    <string name="installer_status_failure_storage">"Недостаточно место в памяти"</string>
+    <string name="installer_status_failure_storage">"Недостаточно места в памяти"</string>
     <string name="installer_status_success">"Успешно установлено"</string>
     <string name="installer_status_unknown">"Неизвестный"</string>
     <string name="installer_status_user_action">"Ожидание подтверждения пользователя"</string>
@@ -110,15 +99,13 @@
     <string name="list_empty_updates">"Нет доступных обновлений"</string>
     <string name="list_installed">"Установлено"</string>
     <string name="list_selected">"Выбранные приложения"</string>
-    <string name="list_update_all">"Обновить всё"</string>
+    <string name="list_update_all">"Обновить все"</string>
     <string name="list_update_all_txt">"Доступны обновления"</string>
     <string name="list_updating">"Обновление"</string>
     <string name="sync_completed">"Синхронизировано"</string>
     <string name="sync_completed_all">"Все репозитории синхронизированы"</string>
     <string name="sync_progress">"Синхронизация репозиториев"</string>
     <string name="sync_failed">"Ошибка синхронизации"</string>
-
-    <!-- Fuzzy -->
     <string name="title_home">"Aurora Droid"</string>
     <string name="title_apps_new">"Новые приложения"</string>
     <string name="title_categories">"Категории"</string>
@@ -133,35 +120,25 @@
     <string name="title_url">"Ссылка"</string>
     <string name="title_fingerprint">"Отпечаток пальца"</string>
     <string name="title_desc">"Описание"</string>
-
-    <!-- Fuzzy -->
-    <string name="pref_dialog_to_apply_restart">"Этот параметр будет применен после перезапуска приложения"</string>
+    <string name="pref_dialog_to_apply_restart">"Этот параметр будет применён после перезапуска приложения"</string>
     <string name="pref_installations">"Установки"</string>
     <string name="pref_install_auto_summary">"Приложения устанавливаются сразу после завершения загрузки"</string>
     <string name="pref_install_auto_title">"Автоматическая установка APK после загрузки"</string>
-    <string name="pref_install_delete_summary">"На устройствах под управлением Android Pie + с Root APK по умолчанию удаляются"</string>
-
-    <!-- Fuzzy -->
+    <string name="pref_install_delete_summary">"На устройствах под управлением Android Pie + с методом Root-установки, APK по умолчанию удаляются"</string>
     <string name="pref_install_delete_title">"Удалить apk после установки"</string>
-
-    <!-- Fuzzy -->
-    <string name="pref_install_type_summary">"Используйте собственный установщик для установки пакетов, нарушает пакетную установку apk"</string>
+    <string name="pref_install_type_summary">"Использовать родной установщик для установки пакетов, ломает пакетную установку apk"</string>
     <string name="pref_install_type_title">"Принудительно использовать системный установщик"</string>
     <string name="pref_install_mode_summary">"Выберите метод установки APK"</string>
     <string name="pref_install_mode_title">"Метод установки"</string>
     <string name="pref_install_mode_native">"Родной"</string>
     <string name="pref_install_mode_root">"Root"</string>
-    <string name="pref_install_mode_services">"Сервисы Aurora"</string>
-    <string name="pref_install_mode_no_root">"Root-доступ недоступен, убедитесь, что ваше устройство рутировано"</string>
-
-    <!-- Fuzzy -->
-    <string name="pref_install_mode_root_warn">"Root-установка требует загрузки apk в данных приложения, чтобы установить через оболочку adb, Android Pie +"</string>
+    <string name="pref_install_mode_services">"Службы Aurora"</string>
+    <string name="pref_install_mode_no_root">"Root-доступ недоступен, убедитесь что ваше устройство рутировано и рут доступ представлен для Aurora Droid."</string>
+    <string name="pref_install_mode_root_warn">"Метод Root-установки требует скачанный apk в данных приложения, чтобы установить через оболочку adb, Android Pie +"</string>
 
     <!-- Fuzzy -->
     <string name="pref_install_mode_no_services">"Службы Aurora не установлены, сначала установите службы"</string>
-
-    <!-- Fuzzy -->
-    <string name="pref_install_mode_offline_services">"Службы Aurora не подключены, убедитесь, что они включены, и у вас правильная версия приложения."</string>
+    <string name="pref_install_mode_offline_services">"Службы не подключены, убедитесь, что они включены, и у вас установлена правильная версия служб (&gt;=1.0.5)."</string>
     <string name="pref_ui">"Пользовательский интерфейс"</string>
     <string name="pref_ui_theme_title">"Тема"</string>
     <string name="pref_ui_theme_light">"Светлая"</string>
@@ -195,10 +172,8 @@
     <string name="pref_updates_3days">"3 дня"</string>
     <string name="pref_updates_7days">"7 дней"</string>
     <string name="pref_services_title">"Службы Aurora"</string>
-
-    <!-- Fuzzy -->
-    <string name="pref_services_desc">"Запустить сервисы Aurora"</string>
-    <string name="pref_services_desc_alt">"Aurora Сервисы недоступны. Нажмите, чтобы перейти в хранилище сервисов, чтобы узнать больше."</string>
+    <string name="pref_services_desc">"Запустить службы Aurora"</string>
+    <string name="pref_services_desc_alt">"Службы Aurora недоступны. Нажмите, чтобы перейти в репозиторий служб, чтобы узнать больше."</string>
     <string name="repo_list">"Список репозиториев"</string>
     <string name="repo_list_select">"Выберите репозитории для синхронизации"</string>
     <string name="repo_qr_scan">"Сканировать QR-код"</string>
@@ -206,7 +181,7 @@
     <string name="repo_name">"Название репозитория"</string>
     <string name="repo_addr">"Адрес репозитория"</string>
     <string name="repo_fingerprint">"Отпечаток репозитория"</string>
-    <string name="sys_log">"Лог синхронизации"</string>
+    <string name="sys_log">"Журнал синхронизации"</string>
     <string name="toast_no_repo_selected">"Репозитории не выбраны"</string>
     <string name="error_app_not_found">"Приложение не найдено"</string>
     <string name="error_app_not_installed">"Приложения не установлены"</string>
@@ -214,20 +189,104 @@
     <string name="error_search_not_found">"Подходящее приложение не найдено"</string>
     <string name="error_unknown">"Произошла неизвестная ошибка"</string>
     <string name="error_no_updates">"Нет доступных обновлений"</string>
-
-    <!-- Fuzzy -->
-    <string name="notification_installation_auto">"Загружено, нажмите для установки"</string>
+    <string name="notification_installation_auto">"Нажмите для установки"</string>
     <string name="toast_apk_blacklisted">"Чёрный список"</string>
     <string name="toast_apk_whitelisted">"Белый список"</string>
     <string name="toast_apk_copy_success">"APK успешно скопирован"</string>
     <string name="toast_apk_copy_failure">"Ошибка копирования APK"</string>
-    <string name="action_ignore">"Игнорировать версию"</string>
+    <string name="action_ignore">"Игнорировать эту версию"</string>
     <string name="action_save">"Сохранить"</string>
     <string name="action_show_user_only">"Только польз. приложения"</string>
     <string name="action_sortBy">"Сортировать по"</string>
+    <string name="details_apk_suggested">"Запрошено"</string>
     <string name="dialog_sync_completed_desc_alt">"Нет обновлений"</string>
     <string name="dialog_repo_list">"Список репозиториев"</string>
     <string name="menu_repository">"Репозитории"</string>
-    <string name="menu_setting">"Установки"</string>
-    <string name="menu_about">"\"О\""</string>
+    <string name="menu_setting">"Настройки"</string>
+
+    <!-- "О" is an incorrect translation, the standard Russian translation for "About" in applications or programs is "О приложении" or "О программе". -->
+    <string name="menu_about">"О приложении"</string>
+    <string name="download_metadata">"Получение метаданных"</string>
+    <string name="list_update_all_txt_one">"обновление доступно"</string>
+    <string name="list_update_selected">"Обновить выбранное"</string>
+    <string name="notification_channel_alert">"Быстрое уведомление"</string>
+    <string name="notification_channel_general">"Общее уведомление"</string>
+    <string name="sync_service">"Служба синхронизации репозиториев запущена"</string>
+    <string name="sync_init">"Проверка обновлений"</string>
+    <string name="sync_downloading">"Скачивание репозиториев"</string>
+    <string name="title_installed">"Мои приложения и игры"</string>
+    <string name="pref_updates_app_experimental">"Разрешить экспериментальные обновления"</string>
+    <string name="pref_updates_app_experimental_desc">"Если включено, бета/альфа сборки будут заменять стабильные"</string>
+    <string name="details_new_changes">"Что нового"</string>
+    <string name="pref_downloader_internal">"Скачивать приложения во внутреннюю память"</string>
+    <string name="pref_downloader_internal_desc">"Если включено, вы не сможете устанавливать приложения через Службы Aurora"</string>
+    <string name="action_reset">"Сбросить"</string>
+    <string name="action_select_all">"Выбрать все"</string>
+    <string name="list_not_installed">"Не установлено"</string>
+    <string name="list_repo_availability">"Проверка доступности"</string>
+    <string name="list_repo_available">"Доступно"</string>
+    <string name="list_repo_unavailable">"Недоступно"</string>
+    <string name="title_repo_add_desc">"Добавить пользовательский репозиторий для синхронизации"</string>
+
+    <!-- Fuzzy -->
+    <string name="toast_repo_sync_empty">"Выберите как минимум один репозиторий для синхронизации"</string>
+    <string name="toast_repo_sync_completed">"Все репозитории обновлены"</string>
+    <string name="toast_repo_sync_no_updates">"Нет доступных обновлений"</string>
+    <string name="about_libera">"Libera Pay"</string>
+    <string name="about_libera_summary">"Станьте покровителем на Libera Pay"</string>
+    <string name="about_bitcoin_btc">"Bitcoin"</string>
+    <string name="about_bitcoin_btc_summary">"Пожертвовать через Bitcoin (BTC)"</string>
+    <string name="about_bitcoin_bch">"Bitcoin Cash"</string>
+    <string name="about_bitcoin_bch_summary">"Пожертвовать через Bitcoin Cash (BCH)"</string>
+    <string name="about_bitcoin_eth">"Ethereum"</string>
+    <string name="about_bitcoin_eth_summary">"Пожертвовать через Ethereum (ETH)"</string>
+    <string name="about_bhim">"BHIM - UPI"</string>
+    <string name="about_bhim_summary">"Пожертвовать через UPI"</string>
+    <string name="about_paypal">"Paypal"</string>
+    <string name="about_paypal_summary">"Пожертвовать через PayPal"</string>
+    <string name="about_gitlab">"GitLab"</string>
+    <string name="about_gitlab_summary">"Получите исходный код Aurora Droid из Aurora OSS на GitLab."</string>
+    <string name="about_telegram">"Telegram"</string>
+    <string name="about_telegram_summary">"Присоединяйтесь к группе поддержки Aurora для обсуждений или предложений."</string>
+    <string name="about_xda">"Обсуждение разработки"</string>
+    <string name="about_xda_summary">"Посетите тему Aurora Droid на XDA для обсуждений или предложений."</string>
+    <string name="action_about">"О приложении"</string>
+    <string name="action_loading">"Загрузка"</string>
+    <string name="pref_default">"По умолчанию"</string>
+    <string name="pref_locale_title">"Язык"</string>
+    <string name="pref_locale_custom_title">"Пользовательский язык"</string>
+    <string name="pref_locale_custom_summary">"Использовать язык выбранный пользователем"</string>
+    <string name="pref_locale_list_title">"Выбрать язык"</string>
+    <string name="action_grant">"Подтвердить"</string>
+    <string name="action_syncing">"Синхронизация"</string>
+    <string name="cancel_button_label">"Отмена"</string>
+    <string name="choose_button_label">"Выбрать"</string>
+    <string name="details_anti_features">"Антифункции"</string>
+    <string name="details_no_anti_features">"Нет антифункций"</string>
+    <string name="details_no_changes">"Разработчик не предоставил список изменений"</string>
+
+    <!-- Fuzzy -->
+    <string name="details_no_handler">"Вы не имеете любое доступное приложение которое может управлять %s."</string>
+    <string name="error_dir_access">"Директория не может быть доступна"</string>
+    <string name="label_parent_directory">"Родительская директория"</string>
+    <string name="last_edit">"Последнее изменение: "</string>
+    <string name="pref_install_profile_summary">"Выберите целевой профиль для установки приложений. Работает только с методом установки root"</string>
+    <string name="pref_install_profile_title">"Профили установок"</string>
+    <string name="pref_updates_app_suggested">"Только запрошенные обновления"</string>
+    <string name="pref_updates_app_suggested_desc">"Если включено, только запрошенные обновления будут доступны"</string>
+
+    <!-- Fuzzy -->
+    <string name="repo_unable_to_reach">"Невозможно достигнуть"</string>
+    <string name="string_install_failed">"Не удалось установить"</string>
+    <string name="string_install_success">"Успешно установлено"</string>
+    <string name="string_no_root">"Root доступ не доступен"</string>
+    <string name="string_uninstall_failed">"Не удалось удалить"</string>
+    <string name="string_uninstall_success">"Успешно установлено"</string>
+    <string name="action_remove_all">"Удалить все"</string>
+    <string name="action_save_return">"Сохранить и вернуться"</string>
+    <string name="pref_install_mode_session">"Сеанс"</string>
+    <string name="pref_install_mode_miui">"Похоже, вы используете MIUI, сеансовый установщик не работает на устройствах под управлением MIUI. Пожалуйста, отключите оптимизации MIUI или используйте другие методы установки."</string>
+    <string name="string_export_failed">"Не удалось экспортировать список"</string>
+    <string name="string_export_to">"Список экспортирован"</string>
+    <string name="string_import_failed">"Не удалось импортировать список"</string>
 </resources>
