Update strings.xml (POEditor.com)

--- a/app/src/main/res/values-sc-rIT/strings.xml
+++ b/app/src/main/res/values-sc-rIT/strings.xml
@@ -277,4 +277,32 @@
     <string name="pref_locale_custom_title">"Limba personalidada"</string>
     <string name="pref_locale_custom_summary">"Àplica sa limba personalizada de s'apl."</string>
     <string name="pref_locale_list_title">"Ischerta sa limba"</string>
+    <string name="action_grant">"Fruni"</string>
+    <string name="action_syncing">"Sincronizende"</string>
+    <string name="cancel_button_label">"Annulla"</string>
+    <string name="choose_button_label">"Ischerta"</string>
+    <string name="details_anti_features">"Anti-funtzionalidades"</string>
+    <string name="details_no_anti_features">"Peruna anti-funtzionalidade"</string>
+    <string name="details_no_changes">"S'isvilupadore no at frunidu unu registru de sas modìficas"</string>
+    <string name="details_no_handler">"Non tenes peruna aplicatzione chi potzat gestire %s."</string>
+    <string name="error_dir_access">"Non si podet atzèdere a sa cartella"</string>
+    <string name="label_parent_directory">"Cartella superiore"</string>
+    <string name="last_edit">"Ùrtima modìfica: "</string>
+    <string name="pref_install_profile_summary">"Ischerta su profilu de destinatzione in ue installare sas aplicatziones. Funtzionat petzi cun su mètodu de installatzione root"</string>
+    <string name="pref_install_profile_title">"Profilos de installatzione"</string>
+    <string name="pref_updates_app_suggested">"Agiornamentos cussigiados ebbia"</string>
+    <string name="pref_updates_app_suggested_desc">"Si custa optzione est abilitada petzi sos agiornamentos cussigiados ant a èssere a disponimentu"</string>
+    <string name="repo_unable_to_reach">"Impossìbile de segudare"</string>
+    <string name="string_install_failed">"Installatzione fallida"</string>
+    <string name="string_install_success">"Installatzione acabada chene problemas"</string>
+    <string name="string_no_root">"Atzessu root non disponìbile"</string>
+    <string name="string_uninstall_failed">"Disinstallatzione fallida"</string>
+    <string name="string_uninstall_success">"Disinstallatzione acabada chene problemas"</string>
+    <string name="action_remove_all">"Boga totu"</string>
+    <string name="action_save_return">"Sarva e torra in segus"</string>
+    <string name="pref_install_mode_session">"Sessione"</string>
+    <string name="pref_install_mode_miui">"Paret chi sias impreende MIUI. S'installadore de sessione non funtzionat in sos dispositivos chi impreant MIUI. Disabìlita sas otimizatziones MIUI o imprea àteros mètodos de installatzione."</string>
+    <string name="string_export_failed">"Esportatzione de sa lista fallida"</string>
+    <string name="string_export_to">"Lista esportada"</string>
+    <string name="string_import_failed">"Importatzione de sa lista fallida"</string>
 </resources>
